--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,19 +3,10 @@ owner: trebellar
 repo: services-status
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
-  - name: IPv6 test
-    url: forwardemail.net
-    port: 80
-    check: "tcp-ping"
-    ipv6: true
+  - name: Frontend Service
+    url: https://my.trebellar.app
+  - name: Ingestion Service
+    url: https://ingestion.trebellar.app
 
 status-website:
   cname: status.trebellar.com
